finish select with join part 1